--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,9 @@ html {
 body {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     min-height: 100vh;
     width: 100%;
+    color: #1d262d;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -26,7 +26,7 @@ header ul {
 header a {
     text-decoration: none;
     font-family: 'Comfortaa';
-    color: #FFFFFF;
+    color: #ffffff;
 }
 
 h1,
@@ -38,29 +38,52 @@ h2 {
     font-family: 'Roboto', sans-serif;
 }
 
-.container {
-    max-width: 1440px;
-    margin: 0 auto;
+.text-lightblue {
+    color: #52ccf3;
 }
 
-main {
-    width: 80%;
-    margin: 0px auto;
-    border-radius: 10px;
-    box-shadow: 0 0 10px #1D262D;
+.text-pink {
+    color: #e12179;
+}
+
+.text-lightgreen {
+    color: #90ee90;
+}
+
+.container {
+    display: flex;
+}
+
+/* Code Section */
+.code-part {
+    color: #ffffff;
+    width: 100%;
+    background-color: #1d262d;
+
+}
+
+code {
+    margin: 10px;
+    color: #ffffff;
+    font-weight: 700;
+    font-size: 16px;
+    background-color: #1d262d;
 }
 
 /* Laptop L | Laptop*/
 
 @media screen and (min-width: 769px) {
+    body {
+        justify-content: space-between;
+    }
 
     /* header */
 
     .header {
         display: flex;
         padding: 10px;
-        border-bottom: 3px solid #52CCF3;
-        background: #231F20 linear-gradient(180deg, #232323 0%, #231F20 50%, #303032 100%);
+        border-bottom: 3px solid #52ccf3;
+        background: #231f20 linear-gradient(180deg, #232323 0%, #231f20 50%, #303032 100%);
     }
 
     .header nav {
@@ -75,7 +98,7 @@ main {
 
     /* header nav */
     .header-nav_item {
-        border-right: 3px solid #52CCF3;
+        border-right: 3px solid #52ccf3;
     }
 
     .header-nav_item:last-child {
@@ -87,7 +110,7 @@ main {
     }
 
     .header-nav_link:hover {
-        color: #52CCF3;
+        color: #52ccf3;
         transition: 0.4s;
     }
 
@@ -101,21 +124,29 @@ main {
     }
 
     .facebook-header:hover {
-        background-color: #3B5998;
+        background-color: #3b5998;
         transition: 0.4s;
     }
 
     .instagram-header:hover {
-        background: linear-gradient(180deg, #8B4ABA 0%, #C82C8F 25%, #D45062 50%, #E57754 75%, #F2CE71 100%);
+        background: linear-gradient(180deg, #8b4aba 0%, #c82c8f 25%, #d45062 50%, #e57754 75%, #f2ce71 100%);
         transition: 0.4s;
     }
 
     .github-header:hover {
-        background: linear-gradient(180deg, #3E007E 0%, #30005E 50%, #C547A8 100%);
+        background: linear-gradient(180deg, #3e007e 0%, #30005e 50%, #c547a8 100%);
         transition: 0.4s;
     }
 
     /* main */
+
+    main {
+        width: 80%;
+        margin: 0px auto;
+        border-radius: 10px;
+        color: #1d262d;
+        box-shadow: 0 0 10px #1d262d;
+    }
 
     /* main-header */
 
@@ -123,8 +154,8 @@ main {
         display: flex;
         align-items: center;
         height: 300px;
-        background-color: #1D262D;
-        border-bottom: 5px solid #52CCF3;
+        background-color: #1d262d;
+        border-bottom: 5px solid #52ccf3;
         border-top-right-radius: 10px;
         border-top-left-radius: 10px;
     }
@@ -133,7 +164,7 @@ main {
         max-height: 250px;
         max-width: 250px;
         margin-left: 50px;
-        border: 5px solid #FFFFFF;
+        border: 5px solid #ffffff;
         border-top: none;
         border-left: none;
     }
@@ -149,13 +180,13 @@ main {
 
     .buttons-header h1 {
         font-size: 40px;
-        color: #FFFFFF;
+        color: #ffffff;
     }
 
     .buttons-header h3 {
         margin-top: 7px;
         font-size: 25px;
-        color: #FFFFFF;
+        color: #ffffff;
     }
 
     .hire-me {
@@ -169,18 +200,93 @@ main {
         justify-content: center;
         align-items: center;
         text-decoration: none;
-        color: #52CCF3;
-        border: 3px solid #52CCF3;
+        color: #52ccf3;
+        border: 3px solid #52ccf3;
         border-radius: 50px;
     }
 
     .hire-me:hover {
-        color: #1D262D;
-        background-color: #52CCF3;
+        color: #1d262d;
+        background-color: #52ccf3;
         transition-duration: 1s;
         transition-timing-function: linear;
         transition: 0.2s;
     }
+
+    /* About me */
+
+    .section-title {
+        display: flex;
+        margin: 10px;
+        padding: 10px;
+        align-items: center;
+        width: 50%;
+        border-bottom: 2px solid #52ccf3;
+    }
+
+    .desc {
+        margin: 10px;
+        line-height: 25px;
+        font-weight: 700;
+    }
+
+    /* Skills Section*/
+
+    .skill-name {
+        width: 110px;
+        font-family: 'Comfortaa';
+        font-weight: 700;
+    }
+
+    .my-skills .container {
+        margin: 20px 20px 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .progress {
+        display: flex;
+        margin-left: 20px;
+        background-color: #52ccf3;
+        border-radius: 20px;
+        height: 20px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .html-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 100%;
+        color: #ffffff;
+    }
+
+    .html-skill p {
+        margin-right: 10px;
+    }
+
+    .css-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 80%;
+        color: #ffffff;
+    }
+
+    .css-skill p {
+        margin-right: 10px;
+    }
+
+    .js-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 10%;
+        color: #ffffff;
+    }
+
+    .js-skill p {
+        margin-left: 10px;
+    }
+
 
 }
 
@@ -193,8 +299,8 @@ main {
         display: flex;
         align-items: center;
         flex-direction: column;
-        border-bottom: 3px solid #52CCF3;
-        background: #231F20 linear-gradient(180deg, #232323 0%, #231F20 50%, #303032 100%);
+        border-bottom: 3px solid #52ccf3;
+        background: #231f20 linear-gradient(180deg, #232323 0%, #231f20 50%, #303032 100%);
     }
 
     /* header social nav */
@@ -202,7 +308,7 @@ main {
         width: 100%;
         padding-bottom: 15px;
         margin-bottom: 15px;
-        border-bottom: 1px solid #52CCF3;
+        border-bottom: 1px solid #52ccf3;
     }
 
     .header-social ul {
@@ -217,17 +323,17 @@ main {
     }
 
     .facebook-header {
-        background-color: #3B5998;
+        background-color: #3b5998;
         transition: 0.4s;
     }
 
     .instagram-header {
-        background: linear-gradient(180deg, #8B4ABA 0%, #C82C8F 25%, #D45062 50%, #E57754 75%, #F2CE71 100%);
+        background: linear-gradient(180deg, #8b4aba 0%, #c82c8f 25%, #d45062 50%, #e57754 75%, #f2ce71 100%);
         transition: 0.4s;
     }
 
     .github-header {
-        background: linear-gradient(180deg, #3E007E 0%, #30005E 50%, #C547A8 100%);
+        background: linear-gradient(180deg, #3e007e 0%, #30005e 50%, #c547a8 100%);
         transition: 0.4s;
     }
 
@@ -239,6 +345,13 @@ main {
 
     /* main */
 
+    main {
+        width: 100%;
+        margin: 0px auto;
+        border-radius: 10px;
+        color: #1d262d;
+    }
+
     /* main-header */
 
     .main-header {
@@ -246,17 +359,15 @@ main {
         flex-direction: column;
         padding: 10px;
         align-items: center;
-        background-color: #1D262D;
-        border-bottom: 5px solid #52CCF3;
-        border-top-right-radius: 10px;
-        border-top-left-radius: 10px;
+        background-color: #1d262d;
+        border-bottom: 5px solid #52ccf3;
     }
 
     .profile-photo {
         max-height: 200px;
         max-width: 200px;
         margin-bottom: 30px;
-        border: 2px solid #52CCF3;
+        border: 2px solid #52ccf3;
         border-radius: 10%;
     }
 
@@ -268,13 +379,13 @@ main {
 
     .buttons-header h1 {
         font-size: 30px;
-        color: #FFFFFF;
+        color: #ffffff;
     }
 
     .buttons-header h3 {
         margin-top: 7px;
         font-size: 15px;
-        color: #FFFFFF;
+        color: #ffffff;
     }
 
 
@@ -282,16 +393,89 @@ main {
         display: flex;
         height: 50px;
         width: 100%;
-        margin-top: 40px;
+        margin: 40px;
         font-family: 'Comfortaa';
         font-size: 30px;
         font-weight: 700;
         justify-content: center;
         align-items: center;
         text-decoration: none;
-        background-color: #52CCF3;
-        color: #1D262D;
-        border: 3px solid #52CCF3;
+        background-color: #52ccf3;
+        color: #1d262d;
+        border: 3px solid #52ccf3;
         border-radius: 30px;
+    }
+
+    /* About me */
+
+    .section-title {
+        display: flex;
+        margin: 10px;
+        align-items: center;
+        padding: 10px;
+        border-bottom: 3px solid #52ccf3;
+    }
+
+    .desc {
+        margin: 10px;
+        line-height: 25px;
+        font-weight: 700;
+    }
+
+    /* Skills */
+
+    .skill-name {
+        width: 110px;
+        font-family: 'Comfortaa';
+        font-weight: 700;
+    }
+
+    .my-skills .container {
+        margin: 20px 20px 20px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .progress {
+        display: flex;
+        margin-left: 20px;
+        background-color: #52ccf3;
+        border-radius: 20px;
+        height: 20px;
+        width: 100%;
+        overflow: hidden;
+    }
+
+    .html-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 100%;
+        color: #ffffff;
+    }
+
+    .html-skill p {
+        margin-right: 10px;
+    }
+
+    .css-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 80%;
+        color: #ffffff;
+    }
+
+    .css-skill p {
+        margin-right: 10px;
+    }
+
+    .js-skill {
+        text-align: right;
+        background-color: #1d262d;
+        width: 10%;
+        color: #ffffff;
+    }
+
+    .js-skill p {
+        margin-left: 10px;
     }
 }
